# INF1015_TD_A24

./: .gitignore  CMakeLists.txt  vcpkg.json
TD1_A24/: CMakeLists.txt  main.cpp
TD2_A24/: CMakeLists.txt  Concepteur.hpp  Developpeur.cpp  Developpeur.hpp  Jeu.hpp  ListeConcepteurs.hpp  ListeDeveloppeurs.cpp  ListeDeveloppeurs.hpp  ListeJeux.hpp  ProjetTest.vcxproj  ProjetTest.vcxproj.filters  cmake_cours.cmake  couveture2024-09-29_20_35_35.58.coverage  main.cpp
TD2_A24/CodeCoverage/: couveture2024-09-27232301,67.coverage  couveture2024-09-28203341,61.coverage
TD2_A24/Debug/: ProjetTest.exp  ProjetTest.lib
TD2_A24/ProjetTest/Debug/: CodeAnalysisResultManifest.txt  Developpeur.nativecodeanalysis.sarif  ListeDeveloppeurs.nativecodeanalysis.sarif  ProjetTest.exe.recipe  bibliotheque_cours.nativecodeanalysis.sarif  main.nativecodeanalysis.sarif  verification_allocation.nativecodeanalysis.sarif
TD2_A24/ProjetTest/Debug/ProjetTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ProjetTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
TD2_A24/ProjetTest/Debug/microsoft/STL/: std.compat.ixx.ifc.dt.module.json.command  std.ixx.ifc.dt.d.json  std.ixx.ifc.dt.module.json.command
TD2_A24/include/: CodeCoverage_bugfix.h
TD3_A24/: Concepteur.hpp  Jeu.hpp  Liste.hpp  main.cpp  sortie.txt
TD4_A24/: Affichable.hpp  Heros.cpp  Heros.hpp  Personnage.cpp  Personnage.hpp  ProjetTest.vcxproj  ProjetTest.vcxproj.filters  Vilain.cpp  Vilain.hpp  VilainHeros.cpp  VilainHeros.hpp  lectureBinaire.cpp  (+4 more)
(+51 files in other folders)
